fix visible placeholder on OS Safari

--- a/source/sass/global-style.scss
+++ b/source/sass/global-style.scss
@@ -73,3 +73,7 @@ a {
 a:hover {
   opacity: 0.4;
 }
+
+input::placeholder {
+  overflow: visible;
+}
